syntax = "proto3";

option csharp_namespace = "GrpcFromJava";

package java.via.sdj3.grpc;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}